--- a/UI/index.html
+++ b/UI/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <div id="top">
-            <div style="float:left" id="map"></div>
+            <div id="map"></div>           
+            <div id="reservations"></div>
         </div>
         <div id="bottom">
             <br />
@@ -53,8 +54,12 @@
             <br />
             <br />
             <button value="Submit" onclick="loadAssistants()">
-                Show All Assistants
+                Show Assistants
             </button>
+            <button value="Submit" style="margin-left:5px" onclick="getReservations()">
+                Refresh Reservations
+            </button>
+
         </div>
 
     </body>
